[package]
name = "genomic"
version = "0.1.0"
edition = "2021"
authors = ["Shad Amethyst"]
description = "A small crate for implementing genetical algorithms."
readme = "README.md"
repository = "https://github.com/adri326/genomic-rs"
license = "MIT"
keywords = ["genetic", "ga"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.x"
