[package]
name = "genomic"
version = "0.3.0"
edition = "2021"
authors = ["Shad Amethyst"]
description = "A small crate for implementing genetical algorithms."
readme = "README.md"
repository = "https://github.com/adri326/genomic-rs"
license = "MIT"
keywords = ["genetic", "ga"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
genetic_algorithms = ["dep:genetic_algorithms"]

[dependencies]
rand = "0.8.x"
genetic_algorithms = { version = "0.8.x", optional = true }
